--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://maxlewisconsultantpteltd.github.io/The-Impact-Of-BEPS-On-Transfer-Pricing-Key-Implications/">https://maxlewisconsultantpteltd.github.io/The-Impact-Of-BEPS-On-Transfer-Pricing-Key-Implications/</a><br>
+                <a target="_bLank" href="https://maxlewis.s3.us-east-005.backblazeb2.com/The+Impact+Of+BEPS+On+Transfer+Pricing:+Key+Implications/index.html">https://maxlewis.s3.us-east-005.backblazeb2.com/The+Impact+Of+BEPS+On+Transfer+Pricing:+Key+Implications/index.html</a><br>
+                <a target="_bLank" href="https://the-impact-of-beps-on-transfer-pri-git-c8b5f8-maxlewis-projects.vercel.app/">https://the-impact-of-beps-on-transfer-pri-git-c8b5f8-maxlewis-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://reliable-mooncake-52013f.netlify.app/">https://reliable-mooncake-52013f.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
